Fixes the libsecret 'user' argument passing

Use a HashTable to pass arguments to libsecret, so
that we can conditionally pass the 'user' key/value.

This fixes the bug where cretentials were not being
saved/lookup correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=704744